feat: add new parameters
